--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,5 +1,10 @@
 :root {
-  
+  --text-primary: rgb(255, 255, 255);
+  --bg-primary-black: rgb(11, 10, 10);
+  --secondary-black: #282A3A
+  --dark-yellow: #735F32
+  --primary-yellow: #C69749
+  --navibar-bg: radial-gradient(ellipse at center, rgb(40, 42, 58) 0%, rgba(31,37,52,1) 100%);
 }
 
 * {
@@ -10,6 +15,19 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  
+}
+
+body {
+  background-color: var(--bg-primary-black);
+  background: radial-gradient(ellipse at center, rgb(11, 10, 10) 0%, rgba(2,5,4,1) 100%);
+}
+
+#stars {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 16rem;
+  height: 100vh;
+  z-index: 1;
 }
